syntax = "proto3";
option go_package = "./pb/corev1";
package proto;

import "helloworld.proto";
import "google/api/annotations.proto";

// Here is the overall greeting service definition where we define all our endpoints
service Credential {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/api/v1/credential1"
      body: "*"
    };
  }

  rpc SayHello2 (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/api/v1/credential2"
      body: "*"
    };
  }

  rpc SayHello3 (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/api/v1/credential3"
      body: "*"
    };
  }
}