syntax = "proto3";

package proto;

option go_package = "/proto";

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}
  
// The response message containing the greetings
message HelloReply {
  string message = 1;
}


  